[package]
name = "tiruka_oasis_risk_modeling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
[lib]
name = "tiruka_oasis_risk_modeling"
crate-type = ["rlib", "cdylib"]
[depndencies.pyo3]
version = "0.13.2"
features = ["extension-module"]
